fix(layout): remove double scrolling issue when modal open
this fix will work on all browsers but Safari on iOS <= 12

re #186

--- a/assets/stylesheets/_components--modal.scss
+++ b/assets/stylesheets/_components--modal.scss
@@ -3,3 +3,9 @@
     padding: 5px 10px;
   }
 }
+
+// Avoid double scroll on all browsers but Safari iOS <= 12
+body.modal-open {
+  height: 100%;
+  overflow: hidden; 
+}
